list and list groups

--- a/index.html
+++ b/index.html
@@ -15,140 +15,56 @@
 </head>
 <body>
 
-    <form class="w-50 mb-5" action="">
-   
-    <div class="mb-3">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
-    </div>
 
-    <div class="mb-3">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control">
-    </div>
+    <ul class="list-unstyled">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+    </ul>
 
-    <button type="submit" class="btn btn-outline-primary">Submit</button>
+    <br><br>
 
-    </form>
+    <ul class="list-inline">
+        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
+    </ul>
 
-    <form action="" class="mb-5">
+    <br><br>
 
-        <div class="row g-3">
-            <div class="col">
-                <input type="text" class="form-control">
-               
-            </div>
+    <ul class="list-group w-25">
+        <li class="list-group-item active">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item disabled">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+    </ul>
 
-            <div class="col">
-                <input type="text" class="form-control">
-            </div>
+    <br><br>
 
-            <div class="col">
-                <input type="text" class="form-control">
-            </div>
-        </div>    
-    </form>
+    <ul class="list-group list-group-flush w-25">
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+    </ul>
+
+    <br><br><br>
+
+    <ul class="list-group w-25">
+        <a href="lorem2" class="list-group-item list-group-item-action">Lorem ipsum dolor sit amet.</a>
+        <a href="lorem2" class="list-group-item list-group-item-action active">Lorem ipsum dolor sit amet.</a>
+        <a href="lorem2" class="list-group-item list-group-item-action">Lorem ipsum dolor sit amet.</a>
+        <a href="lorem2" class="list-group-item list-group-item-action disabled">Lorem ipsum dolor sit amet.</a>
+    </ul>
 
 
-    <form class="mb-5">
-
-       <div class="row g-3">
-
-           <div class="col-6">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" class="form-control">
-           </div>
-
-           <div class="col-6">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" class="form-control">
-           </div>
-
-        <div class="col-12">
-            <label for="adress">Adress 1</label>
-            <textarea name="adress" id="adress" class="form-control"></textarea>
-        </div>
-
-         <div class="col-12">
-            <label for="adress">Adress 2</label>
-            <textarea name="adress" id="adress" class="form-control"></textarea>
-        </div>
-
-        <div class="col-6">
-            <label for="city">City</label>
-            <input type="text" name="city" id="city" class="form-control">
-        </div>
-
-        <div class="col-4">
-            <label for="country">Country</label>
-            <input type="text" name="country" id="country" class="form-control">
-        </div>
-
-        <div class="col-2">
-            <label for="zipcode">Zip Code</label>
-            <input type="text" name="zipcode" id="zipcode" class="form-control">
-        </div>
-
-        <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="notifications" id="notifications" class="form-check-input">
-                <label class="form-check-label" for="notifications">Send me notifications</label>
-            </div>
-        </div>
-    
-        <div class="col-12">
-            <button type="submit" class="btn btn-outline-primary btn-block">Submit</button>
-        </div>
-        </div>
-    </form>
   
 
 
 
-    <form action="" class="mb-5">
-        <div class="row mb-3">
-            <label class="col-2" for="email">Email</label>
-            <div class="col-10">
-                <input type="email" class="form-control">
-            </div>
-        </div>
-
-        <div class="row mb-3">
-            <label class="col-2" for="password">Password</label>
-            <div class="col-10">
-                <input type="password" class="form-control">
-            </div>
-        </div>
-
-        <div class="row mb-3">
-            <label class="col-2" for="gender">Gender</label>
-            <div class="col-10">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="female">
-                    <label for="female" class="form-check-label">Female</label>
-                </div>
-
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="male">
-                    <label for="male" class="form-check-label">Male</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-3 offset-2">
-
-            <div class="col-10" >
-                <button type="submit" class="btn btn-primary">Submit</button>
-
-            </div>
-
-
-
-        </div>
-
-
-    </form>
-
+  
 
 
 
