--- a/index.html
+++ b/index.html
@@ -15,76 +15,87 @@
 </head>
 <body>
 
+<div class="alert alert-primary">
+    Lorem ipsum dolor sit.
+</div>
 
-    <ul class="list-unstyled">
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem ipsum dolor sit amet.</li>
-    </ul>
+<div class="alert alert-secondary">
+    Lorem ipsum dolor sit.
+</div>
 
-    <br><br>
+<div class="alert alert-warning">
+    Lorem ipsum dolor sit.
+</div>
 
-    <ul class="list-inline">
-        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-inline-item">Lorem ipsum dolor sit amet.</li>
-    </ul>
+<div class="alert alert-success">
+    Lorem ipsum dolor sit.
+</div>
 
-    <br><br>
+<div class="alert alert-danger">
+    Lorem ipsum dolor sit.
+</div>
 
-    <ul class="list-group w-25">
-        <li class="list-group-item active">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item disabled">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-    </ul>
+<div class="alert alert-info">
+    Lorem ipsum dolor sit.
+</div>
 
-    <br><br>
+<div class="alert alert-dark">
+    Lorem ipsum dolor sit.
+</div>
 
-    <ul class="list-group list-group-flush w-25">
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
-    </ul>
-
-    <br><br><br>
-
-    <ul class="list-group w-25">
-        <a href="lorem2" class="list-group-item list-group-item-action">Lorem ipsum dolor sit amet.</a>
-        <a href="lorem2" class="list-group-item list-group-item-action active">Lorem ipsum dolor sit amet.</a>
-        <a href="lorem2" class="list-group-item list-group-item-action">Lorem ipsum dolor sit amet.</a>
-        <a href="lorem2" class="list-group-item list-group-item-action disabled">Lorem ipsum dolor sit amet.</a>
-    </ul>
+<div class="alert alert-light">
+    Lorem ipsum dolor sit.
+</div>
 
 
-  
+<br><br><br>
+
+<div class="alert alert-light">
+    Lorem ipsum dolor sit.
+    <a href="" class="alert-link">Link text</a>
+</div>
+
+<div class="alert alert-light">
+    Lorem ipsum 
+    <a href="" class="alert-link">dolor sit.</a>
+</div>
+
+<br><br>
+
+<div class="alert alert-success">
+    <h4>Lorem ipsum dolor sit.</h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit pariatur sint nisi eligendi possimus fugit nam quam dolorem reprehenderit asperiores!</p>
+    <hr>
+    <p class="mb-0">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum possimus consequuntur velit ipsam consequatur?
+    </p>
+
+</div>
+
+<br><br>
+
+<div class="alert alert-danger">
+    <h4>Lorem ipsum dolor sit.</h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit pariatur sint nisi eligendi possimus fugit nam quam dolorem reprehenderit asperiores!</p>
+    <hr>
+    <p class="mb-0">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum possimus consequuntur velit ipsam consequatur?
+    </p>
+</div>
 
 
+<br><br><br>
 
-  
-
-
-
-
-
-
-
-
+<div class="alert alert-warning alert-dismissible fade show">
+    Lorem ipsum dolor sit amet.
+    <button type="button" class="close" data-dismiss="alert">
+        <span>&times;Kapat</span>
+    </button>
+</div>
 
 
-
-
-
-
-
-
-
-
-
-
+<br><br><br>
+<div id="message"></div>
 
 
 
@@ -92,6 +103,14 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+<script>
+    var message = document.getElementById("message");
+    message.classList ="alert alert-success";
+    message.innerHTML = "success message";
+
+    console.log()
+</script>
 
 </body>
 </html>
