--- a/index.html
+++ b/index.html
@@ -15,87 +15,68 @@
 </head>
 <body>
 
-<div class="alert alert-primary">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-secondary">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-warning">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-success">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-danger">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-info">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-dark">
-    Lorem ipsum dolor sit.
-</div>
-
-<div class="alert alert-light">
-    Lorem ipsum dolor sit.
-</div>
+    <span class="badge bg-primary">Primary</span>
+    <span class="badge bg-secondary">Secondary</span>
+    <span class="badge bg-success">success</span>
+    <span class="badge bg-info">info</span>
+    <span class="badge bg-danger">danger</span>
+    <span class="badge bg-warning">warning</span>
+    <span class="badge bg-light text-dark">warning</span>
+    <span class="badge bg-dark">warning</span>
 
 
-<br><br><br>
+    <br><br><br>
 
-<div class="alert alert-light">
-    Lorem ipsum dolor sit.
-    <a href="" class="alert-link">Link text</a>
-</div>
+     <span class="badge rounded-pill bg-primary">Primary</span>
+    <span class="badge rounded-pill bg-secondary">Secondary</span>
+    <span class="badge rounded-pill bg-success">success</span>
+    <span class="badge rounded-pill bg-info">info</span>
+    <span class="badge rounded-pill bg-danger">danger</span>
+    <span class="badge rounded-pill bg-warning">warning</span>
+    <span class="badge rounded-pill bg-light text-dark">warning</span>
+    <span class="badge rounded-pill bg-dark">warning</span>
 
-<div class="alert alert-light">
-    Lorem ipsum 
-    <a href="" class="alert-link">dolor sit.</a>
-</div>
+
+    <br><br>
+
+    <h1>Example Heading <span class="badge bg-secondary">New</span></h1>
+    <h2>Example Heading <span class="badge bg-secondary">New</span></h2>
+    <h3>Example Heading <span class="badge bg-secondary">New</span></h3>
+    <h4>Example Heading <span class="badge bg-secondary">New</span></h4>
+    <h5>Example Heading <span class="badge bg-secondary">New</span></h5>
+    <h6>Example Heading <span class="badge bg-secondary">New</span></h6>
+
 
 <br><br>
 
-<div class="alert alert-success">
-    <h4>Lorem ipsum dolor sit.</h4>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit pariatur sint nisi eligendi possimus fugit nam quam dolorem reprehenderit asperiores!</p>
-    <hr>
-    <p class="mb-0">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum possimus consequuntur velit ipsam consequatur?
-    </p>
-
-</div>
-
-<br><br>
-
-<div class="alert alert-danger">
-    <h4>Lorem ipsum dolor sit.</h4>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit pariatur sint nisi eligendi possimus fugit nam quam dolorem reprehenderit asperiores!</p>
-    <hr>
-    <p class="mb-0">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum possimus consequuntur velit ipsam consequatur?
-    </p>
-</div>
-
+<button type="button" class="btn btn-outline-primary">
+    Messages <span class="badge bg-danger">5</span>
+</button>
 
 <br><br><br>
 
-<div class="alert alert-warning alert-dismissible fade show">
-    Lorem ipsum dolor sit amet.
-    <button type="button" class="close" data-dismiss="alert">
-        <span>&times;Kapat</span>
-    </button>
-</div>
+<nav class="bg-info">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active">Home</li>
+    </ol>
+</nav>
+
+<nav class="bg-info">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active">Home</li>
+    </ol>
+</nav>
 
 
-<br><br><br>
-<div id="message"></div>
+<nav class="bg-info">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item active"><a href="#">Products</a></li>
+        <li class="breadcrumb-item active"><a href="#">Home</a></li>
+    </ol>
+</nav>
+
+
 
 
 
