--- a/index.html
+++ b/index.html
@@ -15,66 +15,137 @@
 </head>
 <body>
 
-    <span class="badge bg-primary">Primary</span>
-    <span class="badge bg-secondary">Secondary</span>
-    <span class="badge bg-success">success</span>
-    <span class="badge bg-info">info</span>
-    <span class="badge bg-danger">danger</span>
-    <span class="badge bg-warning">warning</span>
-    <span class="badge bg-light text-dark">warning</span>
-    <span class="badge bg-dark">warning</span>
 
-
-    <br><br><br>
-
-     <span class="badge rounded-pill bg-primary">Primary</span>
-    <span class="badge rounded-pill bg-secondary">Secondary</span>
-    <span class="badge rounded-pill bg-success">success</span>
-    <span class="badge rounded-pill bg-info">info</span>
-    <span class="badge rounded-pill bg-danger">danger</span>
-    <span class="badge rounded-pill bg-warning">warning</span>
-    <span class="badge rounded-pill bg-light text-dark">warning</span>
-    <span class="badge rounded-pill bg-dark">warning</span>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" data-toggle = "dropdown">
+            Dropdown Button
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
 
 
     <br><br>
 
-    <h1>Example Heading <span class="badge bg-secondary">New</span></h1>
-    <h2>Example Heading <span class="badge bg-secondary">New</span></h2>
-    <h3>Example Heading <span class="badge bg-secondary">New</span></h3>
-    <h4>Example Heading <span class="badge bg-secondary">New</span></h4>
-    <h5>Example Heading <span class="badge bg-secondary">New</span></h5>
-    <h6>Example Heading <span class="badge bg-secondary">New</span></h6>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" data-toggle = "dropdown">
+            Dropdown Button
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+           <li>
+            <h6 class="dropdown-header">Dropdown Header</h6>
+           </li>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
+
+    <br><br>
+
+    <div class="btn-group">
+        <button class="btn btn-danger">Action</button>
+
+        <button class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle = "dropdown">
+           <span class="sr-only"> Dropdown Button </span>
+        </button>
+
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
+
+    
+    <div class="btn-group">
+        <button class="btn btn-danger btn-sm">Action</button>
+
+        <button class="btn btn-secondary btn-sm dropdown-toggle dropdown-toggle-split" data-toggle = "dropdown">
+           <span class="sr-only"> Dropdown Button </span>
+        </button>
+
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
+
+    <br><br>
+
+      <div class="btn-group">
+        <button class="btn btn-danger btn-lg">Action</button>
+
+        <button class="btn btn-secondary btn-lg dropdown-toggle dropdown-toggle-split" data-toggle = "dropdown">
+           <span class="sr-only"> Dropdown Button </span>
+        </button>
+
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
 
 
-<br><br>
 
-<button type="button" class="btn btn-outline-primary">
-    Messages <span class="badge bg-danger">5</span>
-</button>
+    <br><br>
+    
+      <div class="dropdown dropup">
+        <button class="btn btn-danger btn-lg">Action</button>
 
-<br><br><br>
+        <button class="btn btn-secondary btn-lg dropdown-toggle dropdown-toggle-split" data-toggle = "dropdown">
+           <span class="sr-only"> Dropdown Button </span>
+        </button>
 
-<nav class="bg-info">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item active">Home</li>
-    </ol>
-</nav>
-
-<nav class="bg-info">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item active">Home</li>
-    </ol>
-</nav>
+        <ul class="dropdown-menu">
+            <li><a href="#" class="dropdown-item">Menu 1</a></li>
+            <li><a href="#" class="dropdown-item">Menu 2</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a href="#" class="dropdown-item">Menu 3</a></li>
+        </ul>
+    </div>
 
 
-<nav class="bg-info">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active"><a href="#">Products</a></li>
-        <li class="breadcrumb-item active"><a href="#">Home</a></li>
-    </ol>
-</nav>
+    <br><br>    
+      <div class="dropdown dropright">
+            <button class="btn btn-danger btn-lg">Action</button>
+
+            <button class="btn btn-secondary btn-lg dropdown-toggle dropdown-toggle-split" data-toggle = "dropdown">
+            <span class="sr-only"> Dropdown Button </span>
+            </button>
+
+            <ul class="dropdown-menu active">
+                <li><a href="#" class="dropdown-item">Menu 1</a></li>
+                <li><a href="#" class="dropdown-item active">Menu 2</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a href="#" class="dropdown-item">Menu 3</a></li>
+            </ul>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
