bootstrap Card template

--- a/index.html
+++ b/index.html
@@ -16,107 +16,196 @@
 <body>
 
 
-    <div class="card">
-        <div class="card-body">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, corporis?
-        </div>
-    </div>
-
-<br><br>
-    <div class="card bg-warning text-white my-3">
-        <div class="card-body">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, corporis?
-        </div>
-    </div>
-
-    <br><br>
-    <div class="card bg-success text-white my-3">
-        <div class="card-body">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, corporis?
-        </div>
-    </div>
-
-
-     <br><br>
-    <div class="card my-3 w-50">
-        <div class="card-header">Header</div>
-
-        <div class="card-body">
-            <h5 class="card-title">Lorem, ipsum dolor.</h5>
-            <div class="card-text mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, corporis?</div>
-            <button class="btn btn-primary my-2">Button</button>
-        </div>
-
-        <footer class="card-footer">Footer Part</footer>
-    </div>
-
-    <br><br>
-    <div class="card my-3">
-        <div class="card-header">Header</div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-        </ul>
-    </div>
-
-
-      <br><br>
-    <div class="card my-3 text-center">
-        <div class="card-header">Header</div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-            <li class="list-group-item">Lorem, ipsum dolor.</li>
-        </ul>
-            <button class="btn btn-primary my-2 w-50">Button</button>
-
-    </div>
-
-    <div class="card my-3 w-25">
-        <img src="img/1.jpg" alt="avatar" class="card-img-top">
-        <div class="card body">
-
-            <h4 class="card-title">Mike Conatton</h4>
-            <p class="card-text">Lorem, ipsum dolor.</p>
-            <a href="#" class="card-link">See</a>
-
-        </div>
-    </div>
-
-
-    <br><br>
-       <div class="card my-3 w-25">
-        
-        <div class="card body">
-            <h4 class="card-title">Mike Conatton</h4>
-            <p class="card-text">Lorem, ipsum dolor.</p>
-            <a href="#" class="card-link">See</a>
-        </div>
-        <img src="img/1.jpg" alt="avatar" class="card-img-bottom">
-    </div>
-
-    <div class="card">
-
-    </div>
-
-
-
-    <div class="card my-3 w-50 text-white text-center">
-        <img src="img/1.jpg" alt="avatar" class="card-img-top">
-        <div class="card-img-overlay">
-
-            <h4 class="card-title">Mike Conatton</h4>
-            <p class="card-text">Lorem, ipsum dolor.</p>
-            <a href="#" class="card-link">See</a>
-
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-4">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-8">
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                </div>
+            </div>
         </div>
     </div>
 
 
 
+    <div class="card-group">
+
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     </div>
+
+<hr>
+<hr>
+
+ <div class="card-group">
+
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                      <div class="card-footer">
+        <small class="text-muted">Last update 3 min ago</small>
+    </div>
+        </div>
+    </div>
+
+     <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                      <div class="card-footer">
+        <small class="text-muted">Last update 3 min ago</small>
+    </div>
+        </div>
+    </div>
+    
+
+     </div>
+
+   
+<div class="row row-cols-2">
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="row">
+                <img src="img/1.jpg" alt="" class="img-fluid">
+            </div>
+                <div class="card-body">
+                    <h5 class="card-text">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
+        </div>
+    </div>
+</div>
 
 
 
