--- a/index.html
+++ b/index.html
@@ -15,204 +15,72 @@
 </head>
 <body>
 
+    <ul class="nav">
+        <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
+ 
+    <br><br>
 
-    <div class="card mb-3">
-        <div class="row">
-            <div class="col-4">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-8">
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <nav class="nav">
+        <a href="" class="nav-link">Home</a>
+        <a href="" class="nav-link">Product</a>
+        <a href="" class="nav-link">About</a>
+    </nav>
 
 
-    <div class="card-group">
+    <br><br>
 
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     </div>
-
-<hr>
-<hr>
-
- <div class="card-group">
-
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                      <div class="card-footer">
-        <small class="text-muted">Last update 3 min ago</small>
-    </div>
-        </div>
-    </div>
-
-     <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                      <div class="card-footer">
-        <small class="text-muted">Last update 3 min ago</small>
-    </div>
-        </div>
-    </div>
-    
-
-     </div>
-
-   
-<div class="row row-cols-2">
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-
-    <div class="card mb-3">
-        <div class="row">
-                <img src="img/1.jpg" alt="" class="img-fluid">
-            </div>
-                <div class="card-body">
-                    <h5 class="card-text">Card Title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, voluptates?</p>
-        </div>
-    </div>
-</div>
+ <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
 
 
+    <br><br>
+
+ <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
+
+  <br><br>
+
+ <ul class="nav flex-column">
+        <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
 
 
+<br><br>
+ <ul class="nav flex-column">
+        <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
 
-
-
+<br><br>
+ <ul class="nav nav-pills nav-fill w-75">
+        <li class="nav-item">
+            <a href="#" class="nav-link active">Home</a>
+            <a href="#" class="nav-link">Product</a>
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul>
 
 
 
