--- a/index.html
+++ b/index.html
@@ -6,81 +6,43 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <title>Bootstrap Breakpoints</title>
-    <style>
-        body {
-            padding: 70px;
-        }
-    </style>
+<style>
+    body { padding: 70px}
+</style>
+
 </head>
 <body>
 
-    <ul class="nav">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
- 
-    <br><br>
-
-    <nav class="nav">
-        <a href="" class="nav-link">Home</a>
-        <a href="" class="nav-link">Product</a>
-        <a href="" class="nav-link">About</a>
-    </nav>
-
-
-    <br><br>
-
- <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
-
-
-    <br><br>
-
- <ul class="nav justify-content-end">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
+  <div class="spinner-border">
+    <span class="sr-only">Loading</span>
+  </div>
 
   <br><br>
+   <div class="spinner-border text-primary">
+    <span class="sr-only">Loading</span>
+  </div>
 
- <ul class="nav flex-column">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
+  <br><br>
+   <div class="spinner-border text-danger">
+    <span class="sr-only">Loading</span>
+  </div>
 
+  <br><br>
+   <div class="spinner-border text-dark">
+    <span class="sr-only">Loading</span>
+  </div>
+
+
+  <br><br>
+   <div class="spinner-grow text-primary" style="width:30rem; height:30rem;">
+    <span class="sr-only">Loading</span>
+  </div>
 
 <br><br>
- <ul class="nav flex-column">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
+<button class="btn btn-primary" type="button">
+<span class="spinner-border spinner-border-sm">Loading</span>
+</button>
 
-<br><br>
- <ul class="nav nav-pills nav-fill w-75">
-        <li class="nav-item">
-            <a href="#" class="nav-link active">Home</a>
-            <a href="#" class="nav-link">Product</a>
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
 
 
 
