--- a/index.html
+++ b/index.html
@@ -13,40 +13,17 @@
 </head>
 <body>
 
-  <div class="spinner-border">
-    <span class="sr-only">Loading</span>
-  </div>
+    <p>
+        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-target="#butonTiklayincaGoster">Button</button>
+        <a href="" class="btn btn-secondary" data-bs-toggle="collapse" data-target="#butonTiklayincaGoster">Link</a>
+    </p>
 
-  <br><br>
-   <div class="spinner-border text-primary">
-    <span class="sr-only">Loading</span>
-  </div>
-
-  <br><br>
-   <div class="spinner-border text-danger">
-    <span class="sr-only">Loading</span>
-  </div>
-
-  <br><br>
-   <div class="spinner-border text-dark">
-    <span class="sr-only">Loading</span>
-  </div>
-
-
-  <br><br>
-   <div class="spinner-grow text-primary" style="width:30rem; height:30rem;">
-    <span class="sr-only">Loading</span>
-  </div>
-
-<br><br>
-<button class="btn btn-primary" type="button">
-<span class="spinner-border spinner-border-sm">Loading</span>
-</button>
-
-
-
-
-
+    <div class="card collapse" id="butonTiklayincaGoster">
+        <div class="card-body">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, eius.
+        </div>
+    </div>
+  
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
