--- a/index.html
+++ b/index.html
@@ -3,39 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap 5 Collapse Demo</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-<style>
-    body { padding: 70px}
-</style>
-
+    <style>
+        body { padding: 70px; }
+    </style>
 </head>
 <body>
 
-    <p>
-        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-target="#butonTiklayincaGoster">Button</button>
-        <a href="" class="btn btn-secondary" data-bs-toggle="collapse" data-target="#butonTiklayincaGoster">Link</a>
-    </p>
-
-    <div class="card collapse" id="butonTiklayincaGoster">
-        <div class="card-body">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, eius.
+   <div class="carousel slide w-50" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
         </div>
     </div>
+
+     <div class="carousel-inner">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
+        </div>
+    </div>
+
+     <div class="carousel-inner">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
+        </div>
+    </div>
+   </div>
+
+   <br><br>
+
+      <div class="carousel slide w-50" data-ride="carousel" id="slider2">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
+        </div>
+    </div>
+
+     <div class="carousel-inner">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
+        </div>
+    </div>
+
+     <div class="carousel-inner">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="img/1.jpg" alt="">
+        </div>
+    </div>
+
+    <a href="#slider2" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span></a>
+    <a href="#slider2" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon"></span></a>
+
+   </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
-<script>
-    var message = document.getElementById("message");
-    message.classList ="alert alert-success";
-    message.innerHTML = "success message";
-
-    console.log()
-</script>
+    <script>
+        // Now this works because the <div id="message"> exists above
+        var message = document.getElementById("message");
+        
+        // Safety check to ensure element exists before modifying it
+        if (message) {
+            message.className = "alert alert-success"; // .className is standard, though .classList works too
+            message.innerHTML = "Success: The JavaScript loaded correctly.";
+            console.log("Message updated");
+        }
+    </script>
 
 </body>
 </html>
