--- a/index.html
+++ b/index.html
@@ -13,55 +13,21 @@
 </head>
 <body>
 
-   <div class="carousel slide w-50" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
+   
+<button type="button" class="btn btn-primary" data-target="#modal1" data-toggle="modal">Open Modal</button>
+
+<div class="modal" id="modal1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Lorem ipsum dolor sit.</h4></div>
+            <div class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quae?</div>
+            <div class="modal-footer">Lorem, ipsum.</div>
+
         </div>
     </div>
-
-     <div class="carousel-inner">
-        <div class="carousel-item">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
-        </div>
-    </div>
-
-     <div class="carousel-inner">
-        <div class="carousel-item">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
-        </div>
-    </div>
-   </div>
-
-   <br><br>
-
-      <div class="carousel slide w-50" data-ride="carousel" id="slider2">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
-        </div>
-    </div>
-
-     <div class="carousel-inner">
-        <div class="carousel-item">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
-        </div>
-    </div>
-
-     <div class="carousel-inner">
-        <div class="carousel-item">
-            <img class="d-block w-100" src="img/1.jpg" alt="">
-        </div>
-    </div>
-
-    <a href="#slider2" class="carousel-control-prev" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span></a>
-    <a href="#slider2" class="carousel-control-next" data-slide="next">
-        <span class="carousel-control-next-icon"></span></a>
-
-   </div>
-    
-
+</div>
 
 
 
