--- a/index.html
+++ b/index.html
@@ -8,30 +8,141 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <style>
-        body { padding: 70px; }
+        html {
+            scroll-behavior: smooth;
+        }
+        body {
+            position:relative;
+        }
     </style>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar">
 
    
-<button type="button" class="btn btn-primary" data-target="#modal1" data-toggle="modal">Open Modal</button>
+<!-- <button id="btn1" type="button" class="btn btn-primary" data-toggle="tooltip" title="tooltip text">Tooltip Text</button>
+<br><br>
+<p>Lorem, ipsum.</p>
+<button id="btn2" type="button" class="btn btn-primary" data-toggle="tooltip" data-html="true" title="<h1>tooltip text</h1>">Tooltip Html</button>
+ -->
 
-<div class="modal" id="modal1">
-    <div class="modal-dialog">
-        <div class="modal-content">
+ <!-- <div class="container bg-secondary">
+container secondary
+ </div>
+<br><br>
+ <div class="container-fluid bg-primary p-5 mt-5">
+    container primary
+ </div> -->
 
-            <div class="modal-header">
-                <h4 class="modal-title">Lorem ipsum dolor sit.</h4></div>
-            <div class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quae?</div>
-            <div class="modal-footer">Lorem, ipsum.</div>
+ <!-- <div class="container my-5">
+    <div class="row">
+        <div class="col border">Column</div>
+    </div>
 
-        </div>
+     <div class="row my-2">
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+    </div>
+
+     <div class="row my-2">
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+        <div class="col border">Column</div>
+    </div>
+    <div class="row my-2">
+        <div class="col-4 border">Column4</div>
+        <div class="col-3 border">Column3</div>
+        <div class="col-1 border">Column1</div>        
+    </div>
+
+    <div class="row my-2">
+        <div class="col-2 border mr-auto">2</div>
+        <div class="col-4 border">4</div>
+    </div>
+ </div> -->
+
+
+ <!-- <div class="container my-4">
+    <div class="row my-4">
+        <div class="col border">column</div>
+        <div class="col border">column</div>
+    </div>
+ </div>
+
+ <br><br>
+
+  <div class="container my-4">
+    <div class="row my-4">
+        <div class="col-sm border">column</div>
+        <div class="col-sm border">column</div>
+    </div>
+ </div> -->
+
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#home" class="nav-link">Home</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#about" class="nav-link">About</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#services" class="nav-link">Services</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#contact" class="nav-link">Contact</a>
+            </li>
+        </ul>
+
+
+
+    </div>
+</nav>
+
+<div class="bg-success" id="home" style="padding-top:400px; padding-bottom:400px;">
+    <div class="container">
+        <h1>Home</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
     </div>
 </div>
 
+<div class="bg-warning" id="about" style="padding-top:400px; padding-bottom:400px;">
+    <div class="container">
+        <h1>About</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+    </div>
+</div>
 
+<div class="bg-danger" id="services" style="padding-top:400px; padding-bottom:400px;">
+    <div class="container">
+        <h1>Services</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+    </div>
+</div>
 
-
+<div class="bg-info" id="contact" style="padding-top:400px; padding-bottom:400px;">
+    <div class="container">
+        <h1>Contact</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias?</p>
+    </div>
+</div>
 
 
 
@@ -45,15 +156,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <script>
-        // Now this works because the <div id="message"> exists above
-        var message = document.getElementById("message");
-        
-        // Safety check to ensure element exists before modifying it
-        if (message) {
-            message.className = "alert alert-success"; // .className is standard, though .classList works too
-            message.innerHTML = "Success: The JavaScript loaded correctly.";
-            console.log("Message updated");
-        }
+        var btn =document.getElementById('btn1');
+        new bootstrap.Tooltip(btn)
+
+        var btn =document.getElementById('btn2');
+        new bootstrap.Tooltip(btn)
+
+
+
+
     </script>
 
 </body>
